--- a/geekshop/mainapp/templates/mainapp/index.html
+++ b/geekshop/mainapp/templates/mainapp/index.html
@@ -17,7 +17,7 @@
 				<p>Новый уровень комфорта. Отличные характеристики.</p>
 				<a href="#"
 					class="button-order">заказать
-					<img src="{% static '/img/arrow.png' %}" alt=""></a>
+					<img src="{% static 'css/img/arrow.png' %}" alt=""></a>
 			</div>	
 			<div class="navi">
 				<a href="#"></a><a href="#"></a><a href="#"></a>
@@ -28,7 +28,7 @@
 			<div class="featured-menu">
 					<a class="active" href="#">Популярные</a><a href="#">Новинки</a>
 			</div>
-			<a class="explore" href="#">показать все <img src="{% static '/img/arrow.png' %}" alt=""></a>
+			<a class="explore" href="#">показать все <img src="{% static 'css/img/arrow.png' %}" alt=""></a>
 			<div class="clearfix">
 			</div>
 			<div class="tab-content">
@@ -37,7 +37,7 @@
 						<a href="#">
 							<img src="/media/{{ product.image}}" alt="{{ product.name }}"> 
 							<div class="text">
-								<img src="{% static '/img/icon-hover.png' %}" alt="{{ product.name }}">
+								<img src="{% static 'css/img/icon-hover.png' %}" alt="{{ product.name }}">
 								<h4>{{ product.name }}</h4>
 								<p>{{ product.short_desc }}</p>
 							</div> 
