--- a/geekshop/mainapp/templates/mainapp/includes/inc_categories_menu.html
+++ b/geekshop/mainapp/templates/mainapp/includes/inc_categories_menu.html
@@ -1,10 +1,18 @@
 <ul class="links-menu">
+        <li>
+            <a href="{% url 'products:category' 0 %}"
+                {% if request.resolver_match.kwargs.pk == 0 %}
+                    class="active"
+                {% endif %}>
+               все 
+            </a>
+        </li>
     {% for link in links_menu %}
         <li>
             <a href="{% url 'products:category' link.pk %}"
-                class="{% if request.resolve_match.url_name == link.name %}
-                        active
-                        {% endif %}">
+                {% if request.resolver_match.kwargs.pk == link.pk %}
+                    class="active"
+                {% endif %}>
                 {{ link.name }}
             </a>
         </li>
