--- a/geekshop/mainapp/templates/mainapp/products.html
+++ b/geekshop/mainapp/templates/mainapp/products.html
@@ -1,6 +1,6 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
-
+				
 {% block content %}
 		<div class="hero-white">
 			<div class="header clearfix">
@@ -9,31 +9,35 @@
 					{% include 'mainapp/includes/inc_main_menu.html' %}
 				</ul>
 				<a href="#" class="search"></a>
-                <a href="#" class="basket"></a>
+				<a href="{% url 'basket:view' %}" class="basket">
+				</a>
+				<span class="basket-count">
+					{{ basket }}
+				</span>
 			</div>
 		</div>
 		<div class="details">
-			<div class="links clearfix">
-				{% include 'mainapp/includes/inc_categories_menu.html' %}
-			</div>
+		    <div class="links clearfix">
+		      {% include 'mainapp/includes/inc_categories_menu.html' %}
+		    </div>
 			<div class="details-products">
 				<div class="details-slider">
 					<div class="slider-product">
-						<img src="{% static 'css/img/slider1.jpg' %}">
+						<img src="{% static 'img/slider1.jpg' %}">
 					</div>
 					<div class="slider-control">
 						<div class="block">
-							<a href="#"><img src="{% static 'css/img/controll.jpg' %}" alt="">
+							<a href="#"><img src="{% static 'img/controll.jpg' %}" alt="">
 								<div class="text"></div>
 							</a>
 						</div>
 						<div class="block">
-							<a href="#"><img src="{% static 'css/img/controll1.jpg' %}" alt="">
+							<a href="#"><img src="{% static 'img/controll1.jpg' %}" alt="">
 								<div class="text"></div>
 							</a>
 						</div>
 						<div class="block">
-							<a href="#"><img src="{% static 'css/img/controll2.jpg' %}" alt="">
+							<a href="#"><img src="{% static 'img/controll2.jpg' %}" alt="">
 								<div class="text"></div>
 							</a>
 						</div>
@@ -59,31 +63,31 @@
 			<div class="related">
 				<div class="title clearfix">
 					<h2>Похожие продукты</h2>
-					<a class="explore" href="#">показать все <img src="{% static 'css/img/arrow.png' %}" alt=""></a>
+					<a class="explore" href="#">показать все <img src="{% static 'img/arrow.png' %}" alt=""></a>
 				</div>
 				<div class="related-products clearfix">
 					<div class="block">
-						<a href="#"><img src="{% static 'css/img/product-11.jpg' %}" alt="">
+						<a href="#"><img src="{% static 'img/product-11.jpg' %}" alt="">
 							<div class="text">
-								<img src="{% static 'css/img/icon-hover.png' %}" alt="img">
+								<img src="{% static 'img/icon-hover.png' %}" alt="img">
 								<h4>Стул повышенного качества</h4>
 								<p>Не оторваться. </p>
 							</div>
 						</a>
 					</div>
 					<div class="block">
-						<a href="#"><img src="{% static 'css/img/product-21.jpg' %}" alt="">
+						<a href="#"><img src="{% static 'img/product-21.jpg' %}" alt="">
 							<div class="text">
-								<img src="{% static 'css/img/icon-hover.png' %}" alt="img">
+								<img src="{% static 'img/icon-hover.png' %}" alt="img">
 								<h4>Стул повышенного качества</h4>
 								<p>Не оторваться. </p>
 							</div>
 						</a>
 					</div>
 					<div class="block">
-						<a href="#"><img src="{% static 'css/img/product-31.jpg' %}" alt="">
+						<a href="#"><img src="{% static 'img/product-31.jpg' %}" alt="">
 							<div class="text">
-								<img src="{% static 'css/img/icon-hover.png' %}" alt="img">
+								<img src="{% static 'img/icon-hover.png' %}" alt="img">
 								<h4>Стул повышенного качества</h4>
 								<p>Не оторваться. </p>
 							</div>
