--- a/geekshop/adminapp/templates/adminapp/includes/inc_menu.html
+++ b/geekshop/adminapp/templates/adminapp/includes/inc_menu.html
@@ -1,7 +1,7 @@
 <ul class="menu">
 	<li><a href="{% url 'main' %}">на главную</a></li>
 	<li><a href="{% url 'adminapp:user_read' %}"
-				 class="{% if request.resolver_match.url_name == 'users' %}active{% endif %}">
+				 class="{% if 'user' in request.resolver_match.url_name  %}active{% endif %}">
 				пользователи
 			</a>
 		</li>
