--- a/geekshop/adminapp/templates/adminapp/users.html
+++ b/geekshop/adminapp/templates/adminapp/users.html
@@ -7,7 +7,7 @@
 			<a href="{% url 'adminapp:user_create' %}">новый пользователь</a>
 		</button>
 		{% for object in objects %}
-			<div class="user_record">
+		<div class="user_record {% if not object.is_active %}not_active{% endif %}">
 				<img src="/media/{{ object.avatar|default:'users_avatar/default_user_avatar.png' }}" alt="">
 				<div class="user_role">
 					{% if object.is_superuser %}
@@ -19,7 +19,11 @@
 						<a href="{% url 'adminapp:user_update' object.pk %}">редактировать</a>
 					</button>
 					<button>
-						<a href="{% url 'adminapp:user_delete' object.pk %}">удалить</a>
+						{% if object.is_active %}
+							<a href="{% url 'adminapp:user_delete' object.pk %}">удалить</a>
+						{% else %}
+							<a href="{% url 'adminapp:user_delete' object.pk %}">восстановить</a>
+						{% endif %}
 					</button>
 				</div>
 				<div class="user_name">
