--- a/geekshop/adminapp/templates/adminapp/category_update.html
+++ b/geekshop/adminapp/templates/adminapp/category_update.html
@@ -9,7 +9,7 @@
   </form>
   <button class="btn btn-round form-control last">
     <a href="{% url 'admin:category_read' %}">
-			к списку товаров
+			к списку категорий
     </a>
   </button>
 {% endblock %}
