--- a/geekshop/adminapp/templates/adminapp/categories.html
+++ b/geekshop/adminapp/templates/adminapp/categories.html
@@ -8,8 +8,19 @@
         новая категория
       </a>
     </button>
+    <div class="paginator">
+      {% if page_obj.has_previous %}
+      <a href="?page={{ page_obj.previous_page_number }}"> < </a>
+      {% endif %}
+      <span class="current">
+        страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+      </span>
+      {% if page_obj.has_next %}
+      <a href="?page={{ page_obj.next_page_number }}"> > </a>
+      {% endif %}
+    </div>
 		
-    {% for object in objects %}
+    {% for object in object_list %}
     <div class="category_record {% if not object.is_active %}not_active{% endif %}">
         <div class="category_name">
           {{ object.name|title }}
@@ -27,9 +38,9 @@
           </button>
           <button>
           {% if object.is_active %}
-            <a href="{% url 'adminapp:user_delete' object.pk %}">удалить</a>
+            <a href="{% url 'adminapp:category_delete' object.pk %}">удалить</a>
           {% else %}
-            <a href="{% url 'adminapp:user_delete' object.pk %}">восстановить</a>
+            <a href="{% url 'adminapp:category_delete' object.pk %}">восстановить</a>
           {% endif %}
           </button>
         </div>
