--- a/geekshop/adminapp/templates/adminapp/products.html
+++ b/geekshop/adminapp/templates/adminapp/products.html
@@ -1,18 +1,30 @@
 {% extends 'adminapp/base.html' %}
 {% load static %}
+{% load my_tags %}
 
 {% block content %}
   <div class="products_list">
     <button class="new_product">
-      <a href={% url 'admin:product_create' category.pk %}>
-        новый продукт
+      <a href="{% url 'admin:product_create' category.pk %}">
+        новый продукт 
       </a>
     </button>
+    <div class="paginator">
+      {% if page_obj.has_previous %}
+      <a href="?page={{ page_obj.previous_page_number }}"> < </a>
+      {% endif %}
+      <span class="current">
+        страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+      </span>
+      {% if page_obj.has_next %}
+      <a href="?page={{ page_obj.next_page_number }}"> > </a>
+      {% endif %}
+    </div>
 		
-    {% for object in objects %}
+    {% for object in object_list %}
     <div class="product_record {% if not object.is_active %}not_active{% endif %}">
         <img 
-          src="/media/{{object.image|default:'products_images/default.jpg'}}"
+          src="{{ object.image|media_for_products }}"
           alt="{{ object.name }}">
         <div class="product_name">
           {{ object.name|title }}
@@ -30,9 +42,9 @@
           </button>
           <button>
           {% if object.is_active %}
-            <a href="{% url 'adminapp:user_delete' object.pk %}">удалить</a>
+            <a href="{% url 'adminapp:product_delete' object.pk %}">удалить</a>
           {% else %}
-            <a href="{% url 'adminapp:user_delete' object.pk %}">восстановить</a>
+            <a href="{% url 'adminapp:product_delete' object.pk %}">восстановить</a>
           {% endif %}
           </button>
         </div>
