--- a/geekshop/adminapp/templates/adminapp/users.html
+++ b/geekshop/adminapp/templates/adminapp/users.html
@@ -1,14 +1,26 @@
 {% extends 'adminapp/base.html' %}
 {% load static %}
+{% load my_tags %}
 
 {% block content %}
 	<div class="users_list">
 		<button class="new_user">
 			<a href="{% url 'adminapp:user_create' %}">новый пользователь</a>
 		</button>
-		{% for object in objects %}
+		<div class="paginator">
+		  {% if page_obj.has_previous %}
+		  <a href="?page={{ page_obj.previous_page_number }}"> < </a>
+		  {% endif %}
+		  <span class="current">
+			страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+		  </span>
+		  {% if page_obj.has_next %}
+		  <a href="?page={{ page_obj.next_page_number }}"> > </a>
+		  {% endif %}
+		</div>
+		{% for object in object_list %}
 		<div class="user_record {% if not object.is_active %}not_active{% endif %}">
-				<img src="/media/{{ object.avatar|default:'users_avatar/default_user_avatar.png' }}" alt="">
+			<img src="{{ object.avatar|media_for_users }}" alt="{{ object.username }}">
 				<div class="user_role">
 					{% if object.is_superuser %}
 						администратор
