--- a/geekshop/mainapp/templates/mainapp/base.html
+++ b/geekshop/mainapp/templates/mainapp/base.html
@@ -3,48 +3,53 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="utf-8">
-  <title>
-    {% if title %}{{ title|title}} - {% endif %}Мой магазин
-  </title>
-  {% block css %}
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-    <link rel="stylesheet" href="{% static '/fonts/font-awesome/css/font-awesome.css' %}"> 
-  {% endblock %}
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>
+            {% if title %}{{ title|title}} - {% endif %}Мой магазин
+        </title>
+        {% block css %}
+            <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+            <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+            <link rel="stylesheet" href="{% static '/fonts/font-awesome/css/font-awesome.css' %}"> 
+        {% endblock %}
+        {% block js %}
+            <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+            <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        {% endblock %}
+    </head>
 
-<body>
-  <div class="container">
-    {% block content %} {% endblock %}
-  </div>
+    <body>
+        <div class="container">
+            {% block content %} {% endblock %}
+        </div>
 
-  {% block footer %}
-  <div class="footer">
-    <div class="clearfix">
-      <div class="text-footer">
-        <h3>контакты</h3>
-      </div>
-      <div class="text-footer">
-        <h3>полезная информация</h3>
-      </div>
-      <div class="text-footer clearfix">
-        <h3>Оставайтесь на связи</h3>
-        <p>Подписаться на новости и рассылки</p>
-        <form>
-          <input type="email" name="email" placeholder="ваш email">
-          <a href="#"><i class="fa fa-paper-plane fa-2x" aria-hidden="true"></i></a>
-        </form>
-      </div>
-    </div>
-    <p class="small">&copy; GB {% now "d m Y" %}</p>
+        {% block footer %}
+        <div class="footer">
+            <div class="clearfix">
+                <div class="text-footer">
+                    <h3>контакты</h3>
+                </div>
+                <div class="text-footer">
+                    <h3>полезная информация</h3>
+                </div>
+                <div class="text-footer clearfix">
+                    <h3>Оставайтесь на связи</h3>
+                    <p>Подписаться на новости и рассылки</p>
+                    <form>
+                        <input type="email" name="email" placeholder="ваш email">
+                        <a href="#"><i class="fa fa-paper-plane fa-2x" aria-hidden="true"></i></a>
+                    </form>
+                </div>
+            </div>
+            <p class="small">&copy; GB {% now "d m Y" %}</p>
 
-    {% include 'mainapp/includes/inc_social_links.html' %}
+            {% include 'mainapp/includes/inc_social_links.html' %}
 
-    <p class="small">Положения &amp; Условия / Конфиденциальность &amp; Cookies</p>
-  </div>
-  {% endblock %}
+            <p class="small">Положения &amp; Условия / Конфиденциальность &amp; Cookies</p>
+        </div>
+        {% endblock %}
 
-</body>
+    </body>
 
 </html>
