--- a/geekshop/ordersapp/templates/ordersapp/includes/inc_order_summary.html
+++ b/geekshop/ordersapp/templates/ordersapp/includes/inc_order_summary.html
@@ -3,8 +3,8 @@
         Заказ №{{ object.pk }} от {{ object.created|date:"Y-m-d H:i:s" }}
     </div>
     <hr>
-    <div class="h4">заказчик: {{ user.last_name }} {{ user.first_name }}</div>
-    <div class="h4">обновлён: {{ object.update|date:"Y-m-d H:i:s" }}</div>
+    <div class="h4">заказчик: {{ object.user}}</div>
+    <div class="h4">обновлён: {{ object.updated|date:"Y-m-d H:i:s" }}</div>
     <div class="h4">статус: {{ object.get_status_display }}</div>
     <hr>
     <div class="h4">
@@ -19,15 +19,14 @@
     <div class="h2">Новый заказ</div>
     <hr>
     <div class="h4">заказчик: {{ user.last_name }} {{ user.first_name }}</div>
-    {% if basket.0 %}
-        <div class="h4">
-            Общее количество товаров:
-            <span class="order_total_quantity">{{ basket.0.get_total_quatity }}</span>
-        </div>
-        <div class="h3">
-            Общая стоимость:
-            <span class="order_total_cost">{{ basket.0.get_total_cost }}</span>
-        </div>
-    {% endif %}
+    <hr>
+    <div class="h4">
+        Общее количество товаров:
+        <span class="order_total_quantity"></span>
+    </div>
+    <div class="h3">
+        Общая стоимость:
+        <span class="order_total_cost"></span>
+    </div>
 {% endif %}
 <hr>
