--- a/geekshop/ordersapp/templates/ordersapp/order_form.html
+++ b/geekshop/ordersapp/templates/ordersapp/order_form.html
@@ -23,20 +23,27 @@
                     {% endif %}
                     <tr class="formset_row">
                         {% for field in form.visible_fields %}
-                        <td class="{% cycle 'td1' 'td2' 'td3' %} order formset_td">
+                        <td class="{% cycle 'td1' 'td2' 'td3' 'td4' %} order formset_td">
                             {% if forloop.first %}
                                 {% for hidden in form.hidden_fields %}
                                     {{ hidden }}
                                 {% endfor %}
                             {% endif %}
                             {{ field.errors.as_ul }}
-                            {{ field }}
+                            {% if field.name != 'price' %}
+                                {{ field }}
+                            {% else %}
+                                {% if field.value %}
+                                    <span class="orderitems-{{ forloop.parentloop.counter0 }}-price">
+                                        {{ field.value }}
+                                    </span> руб.
+                                {% endif %}
+                            {% endif %}
                         </td>
                         {% endfor %}
                     </tr>
                 {% endfor %}
             </table>
-
             <button class="btn btn-default btn-round form-control last" type="submit" value="сохранить">сохранить</button>
             {% include 'ordersapp/includes/inc_order_actions.html' %}
         </form>
