--- a/basketapp/templates/basketapp/includes/inc_basket_list.html
+++ b/basketapp/templates/basketapp/includes/inc_basket_list.html
@@ -14,7 +14,7 @@
 
 {% if basket_items %}
 <div class="basket_summary">
-  В корзине {{ basket_items.0.total_quantity }} товаров на общую сумму
-  {{ basket_items.0.total_cost }} рублей
+  В корзине {{ basket_items.0.get_total_quantity }} товаров на общую сумму
+  {{ basket_items.0.get_total_cost }} рублей
 </div>
 {% endif %}
