--- a/mainapp/templates/mainapp/includes/inc_main_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_main_menu.html
@@ -70,8 +70,8 @@
   <a href="{% url 'basket:view' %}" class="basket"></a>
   <span class="basket-count">
     {% if basket %}
-      {{ basket.0.total_cost|floatformat:0 }}.руб
-      ({{ basket.0.total_quantity }} шт.)
+      {{ basket.0.get_total_cost|floatformat:0 }}руб.
+      ({{ basket.0.get_total_quantity }} шт.)
     {% endif %}
   </span>
 </div>
