--- a/ordersapp/templates/ordersapp/includes/inc_order_summary.html
+++ b/ordersapp/templates/ordersapp/includes/inc_order_summary.html
@@ -20,19 +20,19 @@
     <hr>
     <div class="h4">заказчик: {{ user.last_name }} {{ user.first_name }}</div>
     <hr>
-{#    {% with object_summary=object.get_summary %}#}
+    {% with object_summary=object.get_summary %}
         <div class="h4">
             Общее количество товаров:
             <span class="order_total_quantity">
-{#                {{ object_summary.total_quantity }}#}
+                {{ object_summary.total_quantity }}
             </span>
         </div>
         <div class="h3">
             Общая стоимость:
             <span class="order_total_cost">
-{#                {{ object_summary.total_cost }} руб.#}
+                {{ object_summary.total_cost }} руб.
             </span> руб.
         </div>
-{#    {% endwith %}#}
+    {% endwith %}
 {% endif %}
 <hr>
